[project]
name = "arxivhound"
version = "0.1.0"
description = "An autonomous agent to monitor, fetch, and summarize the latest papers from arXiv on user-defined topics, orchestrated by LangGraph."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.69",
    "langchain-google-genai>=2.1.8",
    "langchain-ollama>=0.3.5",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "jupyterlab>=4.4.5",
    "pre-commit>=4.2.0",
    "ruff>=0.12.4",
]
